--- a/restaurants/templates/restaurants/map.html
+++ b/restaurants/templates/restaurants/map.html
@@ -74,7 +74,9 @@
     </div>
 
     <!-- Map container -->
-    <div id="map"></div>
+    <div class="map-container">
+        <div id="map"></div>
+    </div>
 
     <!-- JavaScript code -->
     <script>
