--- a/restaurants/templates/restaurants/index.html
+++ b/restaurants/templates/restaurants/index.html
@@ -11,7 +11,9 @@
 <body>
     <header>
         {% include 'restaurants/banner.html' %}
-        <h1>Atlanta Food Finder</h1>
+        <div class="header-container1">
+            <img src="{% static 'restaurants/AFFtt.png' %}" alt="AFF" class="logo">
+        </div>
         <nav>
             <ul>
                 <li><a href="{% url 'login' %}" id="loginLink">User Login</a></li>
@@ -57,6 +59,5 @@
         <p>&copy; 2024 Atlanta Food Finder. All rights reserved.</p>
     </footer>
 
-    <script src="{% static 'restaurants/script.js' %}"></script>
 </body>
 </html>
