--- a/restaurants/static/restaurants/style.css
+++ b/restaurants/static/restaurants/style.css
@@ -3,8 +3,8 @@ body {
     font-family: 'Lato', sans-serif;
     background-color: #f0f8ff; /* Light Blue */
     margin: 0;
+    padding: 0;
     color: #333; /* Dark gray for text */
-    padding-bottom: 0;
 }
 
 header {
@@ -141,19 +141,6 @@ h2 {
     margin-top: 10px;
 }
 
-.header-container1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px 0;
-    height: 75px;
-    overflow: hidden;
-}
-
-.logo {
-    width: 300px;
-    height: auto;
-}
 
 /* Button styles */
 button {
@@ -261,9 +248,8 @@ footer {
     color: white;
     text-align: center;
     padding: 10px;
-    position: relative;
+    position: fixed;
     width: 100%;
-    height: 40px;
     bottom: 0;
 }
 
@@ -289,24 +275,6 @@ footer {
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
 }
 
-.header-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 20px 0;
-}
-
-.header-container h1 {
-    margin: 0 15px;
-    font-family: 'Lato', sans-serif;
-    font-size: 30px;
-    color: #254a7d;
-}
-
-.utensil-icon {
-    width: 50px;
-    height: auto;
-}
 
 #searchForm {
     margin-bottom: 20px; /* Space between form and the map */
@@ -452,33 +420,16 @@ footer {
 
 /* Banner Styles */
 .banner {
-    background-color: #1e3a6f;
-    background-image: url("atl.png");
-    background-size: cover;
-    background-position: center;
-    height: 30px;
-    position: relative;
     display: flex;
     justify-content: flex-end;
+    background-color: #1e3a6f;
     padding: 10px;
-}
-
-.banner::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-
 }
 
 .profile {
     position: relative;
     display: flex;
     align-items: center;
-    z-index: 2;
 }
 
 .profile-pic {
@@ -516,15 +467,6 @@ footer {
     color: #ff6347;
 }
 
-.logout-link {
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-}
-
-.logout-link:hover {
-    color: #ff6347;
-}
 
     /* Add some basic styling for success/error messages */
     .success-message {
