--- a/restaurants/templates/restaurants/index.html
+++ b/restaurants/templates/restaurants/index.html
@@ -11,9 +11,7 @@
 <body>
     <header>
         {% include 'restaurants/banner.html' %}
-        <div class="header-container1">
-            <img src="{% static 'restaurants/AFFtt.png' %}" alt="AFF" class="logo">
-        </div>
+        <h1>Atlanta Food Finder</h1>
         <nav>
             <ul>
                 <li><a href="{% url 'login' %}" id="loginLink">User Login</a></li>
@@ -59,5 +57,6 @@
         <p>&copy; 2024 Atlanta Food Finder. All rights reserved.</p>
     </footer>
 
+    <script src="{% static 'restaurants/script.js' %}"></script>
 </body>
 </html>
