Revert "Merge branch 'main' of https://github.com/liuraymond05/AtlantaFoodFinder"
This reverts commit 26500fc8db66d64600c983de0504774f7332a1ec, reversing
changes made to b6da97e6cd6e4b7362ee59f7145727b971e76223.

--- a/restaurants/templates/restaurants/map.html
+++ b/restaurants/templates/restaurants/map.html
@@ -112,20 +112,16 @@
         function loadAllRestaurants(location) {
             const request = {
                 location: location,
-                radius: 10000,
+                radius: 5000,
                 types: ['restaurant'],
             };
             service.nearbySearch(request, handleNearbyResults);
         }
 
-        function handleNearbyResults(results, status, pagination) {
+        function handleNearbyResults(results, status) {
             if (status === google.maps.places.PlacesServiceStatus.OK) {
+                clearMarkers();
                 results.forEach(createMarker);
-                if (pagination && pagination.hasNextPage) {
-                    setTimeout(() => {
-                        pagination.nextPage();
-                    }, 1000);
-                } 
             } else {
                 alert("Error fetching restaurant data: " + status);
             }
