--- a/restaurants/templates/restaurants/map.html
+++ b/restaurants/templates/restaurants/map.html
@@ -42,7 +42,11 @@
     {% include 'restaurants/banner.html' %}
 </header>
 <body class="bottom-padding">
-    <h1>Find Food Near You</h1>
+    <div class="header-container">
+        <img src="{% static 'restaurants/spoon.png' %}" alt="left" class="utensil-icon">
+        <h1>Find Food Near You</h1>
+        <img src="{% static 'restaurants/spoon.png' %}" alt="left" class="utensil-icon">
+    </div>
 
     <!-- Button to get user's location -->
     <button onclick="getUserLocation()">Find My Location</button>
